--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "pinia": "^2.1.2",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuetify": "^3.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
